--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>🌧 Weather App</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-  
+
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -35,9 +35,9 @@
                 <h6>
                   <ul>
                     <li id="city"></li>
-                  <br />
-                  <li
-                  id="current-date"></li>
+                    <br />
+                    <li id="current-date"></li>
+                  </ul>
                 </h6>
                 <h1 id="current-temp"></h1>
               </div>
@@ -74,13 +74,22 @@
             </div>
             <br />
             <form id="search-form">
-              <input type="text" placeholder="Search New City" id="city-input" />
+              <input
+                type="text"
+                placeholder="Search New City"
+                id="city-input"
+              />
               <button type="submit" class="btn btn-success">→</button>
             </form>
           </div>
         </div>
       </div>
     </div>
+    <p>
+      <a href="https://github.com/MrsLianaMulder/WeatherApp-SheCodes"
+        >To GitHub Repository</a
+      >
+    </p>
     <script src="src/script.js"></script>
   </body>
 </html>
