cleaned up html

--- a/index.html
+++ b/index.html
@@ -81,15 +81,16 @@
               />
               <button type="submit" class="btn btn-success">→</button>
             </form>
+            <a
+              href="https://github.com/MrsLianaMulder/WeatherApp-SheCodes"
+              class="git-link"
+              >To GitHub Repository</a
+            >
           </div>
         </div>
       </div>
     </div>
-    <p>
-      <a href="https://github.com/MrsLianaMulder/WeatherApp-SheCodes"
-        >To GitHub Repository</a
-      >
-    </p>
+
     <script src="src/script.js"></script>
   </body>
 </html>
